Fix shift after end of animation

--- a/src/styles/axis.scss
+++ b/src/styles/axis.scss
@@ -35,8 +35,10 @@
     z-index: 999;
     height: 100%;
     top: 0;
-    left: -100px;
+    left: 0;
+    visibility: hidden;
     background-color: transparent;
+    transform: translateX(0);
 
     .cz-timescale-marker-text {
       display: flex;
